--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,26 +4,15 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
-    <title>Todo List App</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" />
+    <title>Todo App</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" />
     <style>
         .list-group-item { word-wrap: break-word; }
-        #todolist button { margin-left: 5px; }
+        #todo button { margin-left: 5px; }
     </style>
 </head>
 <body ng-app="todo" ng-controller="controller" role="document">
-<nav class="navbar fixed-top navbar-expand-sm navbar-dark bg-dark">
-    <div class="container">
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navBarToggler" aria-controls="navBarToggler" aria-expanded="false" aria-label="Spring Boot Sample">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navBarToggler">
-            <a class="navbar-brand" href="#/todo">Todo List</a>
-        </div>
-    </div>
-</nav>
-
-<div class="container" role="main" style="margin-top: 80px !important;">
+<div class="container" role="main" style="margin-top: 100px !important;">
     <div ng-view class="panel-body">
 </div>
 </div>
@@ -31,8 +20,8 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.25/angular.min.js"></script>
 <script src="https://code.angularjs.org/1.2.25/angular-route.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js"></script>
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.10.2/umd/popper.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"></script>
 <script src="js/app.js"></script>
 <script src="js/controller.js"></script>
 <script src="js/service.js"></script>
